# br

./: .gitignore  build.sh
blackriver/: Makefile
blackriver/models/: bloom-7b.yaml
engine/: CMakeLists.txt  Makefile  br_engine.hpp  common.cpp  common.hpp  context.cpp  context.hpp  cpu_tensor.cpp  cpu_tensor.hpp  cuda_tensor.cpp  cuda_tensor.hpp  dag.cpp  dag.hpp  nn.cpp  nn.hpp  operators.hpp  tensortype.cpp  tensortype.hpp  tokenizer.cpp  tokenizer.hpp
kernels/: CMakeLists.txt  all_kernels.hpp  kernels.hpp
kernels/blackriver/: LtSgemm.cu  LtSgemmBatched.cu  embed.cu  gelu.cu  misc.cu  nll_loss.cu
models/baichuan-13B/: modeling_baichuan.py  special_tokens_map.json  tokenizer_config.json
models/baichuan-7B/: common.words  inference.words  modeling_baichuan.py
models/bloomz/: bloomz-7b.yaml  bloomz-7b1.py  bloomz.vocab  common.words  inference.words  model.py
models/bloomz-7b/: bloomz-7b.yaml
test/: Makefile  bloomz.cpp  inference.cpp  repl.cpp  tokenizer.cpp  train.cpp  train_bloom.cpp
tokenizers.c/: Makefile
tokenizers.c/rust/: Cargo.toml
